// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Types Postgres 14 Should convert Array remove sql (SELECT ARRAY_REMOVE(ARRAY_AGG(id), NULL) FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "array_remove",
      "type": {
        "comment": undefined,
        "generated": undefined,
        "items": {
          "postgresType": "anycompatiblearray",
          "type": 1,
        },
        "postgresDescription": undefined,
        "postgresType": "anycompatiblearray",
        "type": 11,
      },
    },
  ],
}
`;

exports[`Load Types Postgres 14 Should convert select json array index sql (SELECT jsonb_col['test']['other'] FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "jsonb_col",
      "type": {
        "comment": undefined,
        "generated": false,
        "nullable": true,
        "postgresDescription": undefined,
        "postgresType": "jsonb",
        "type": 8,
      },
    },
  ],
}
`;

exports[`Load Types Postgres 14 Should convert select jsonpath sql (SELECT jsonb_col @? '$.test' FROM all_types) 1`] = `
{
  "params": [],
  "results": [
    {
      "name": "?column?",
      "type": {
        "nullable": true,
        "postgresType": "bool",
        "type": 5,
      },
    },
  ],
}
`;
